Add new-window action

--- a/options.html
+++ b/options.html
@@ -29,27 +29,29 @@
         <div>
           <label>
             <input type="checkbox" name="clickKey" value="shift" />
-            shift
+            shift&#8679;
           </label>
           <label>
             <input type="checkbox" name="clickKey" value="ctrl" />
-            ctrl
+            ctrl&#9094;
           </label>
           <label>
             <input type="checkbox" name="clickKey" value="alt" />
-            alt
+            alt&#9095;
           </label>
           <label>
             <input type="checkbox" name="clickKey" value="meta" />
-            meta
+            meta&#8984;
           </label>
         </div>
         <select id="click">
-          <option value="open-current">Open in current tab</option>
-          <option value="open-new">Open in new tab</option>
-          <option value="copy-url">Copy URL</option>
-          <option value="copy-hash">Copy anchor hash</option>
+          <option value="replace-address-bar">Replace address bar</option>
+          <option value="open-new-tab">Open in new tab</option>
+          <option value="open-new-window">Open in new window</option>
+          <option value="copy-url">Copy full URL</option>
+          <option value="copy-hash">Copy only hash</option>
         </select>
+        <ul></ul>
       </fieldset>
       <fieldset>
         <legend>Color</legend>
