Fix lint errors

--- a/options.html
+++ b/options.html
@@ -2,25 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <style>
-      #config {
-        display: none;
-      }
-
-      fieldset {
-        margin: 8px 10px;
-      }
-
-      fieldset > label {
-        display: flex;
-      }
-
-      fieldset > label > input,
-      fieldset > select {
-        flex-grow: 1;
-        width: 100%;
-      }
-    </style>
+    <title>Anchor Selector - Options</title>
+    <link rel="stylesheet" href="./stylesheets/options.css" />
   </head>
   <body>
     <form id="config">
@@ -62,7 +45,7 @@
             height="32"
             viewBox="0 0 32 32"
             id="hue-preview"
-          >
+            >
             <rect width="32" height="32" />
           </svg>
           <input type="range" min="0" max="359" name="hue" />
